<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/titulo"
        android:id="@+id/textView"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:background="@android:color/white"
        android:hint="@string/titulo"
        android:layout_weight="0.08" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/direccion"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08"
        android:layout_marginTop="18sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:background="@android:color/white"
        android:hint="@string/url"
        android:layout_weight="0.08" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.59">

        <Button
            android:layout_width="130sp"
            android:layout_height="60sp"
            android:text="@string/guardar"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:id="@+id/saveButton"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40sp"
            android:layout_marginStart="40sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="130sp"
            android:layout_height="60sp"
            android:text="@string/cancelar"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:id="@+id/cancelButton"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="40sp"
            android:layout_marginEnd="40sp"
            android:layout_alignTop="@+id/saveButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>


</LinearLayout>
